[package]
name = "ktgl"
version = "0.1.1"
authors = ["Raytwo <raytwost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
num_enum = "0.5.1"